--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/env-cmd -f config/dev.env nodemon index.js"
+    "dev": "./node_modules/.bin/env-cmd -f config/dev.env nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
