--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@scout_apm/scout-apm": "^0.2.2",
     "@sendgrid/mail": "^7.4.4",
     "axios": "^0.21.1",
     "csv-parser": "^3.0.0",
